Lag domene-klasser for oppretting av ny dialog og eller meldinger