@@ -8,6 +8,7 @@ import no.nav.common.client.aktoroppslag.AktorOppslagClient;
 import no.nav.common.types.identer.AktorId;
 import no.nav.common.types.identer.Fnr;
 import no.nav.common.types.identer.Id;
+import no.nav.fo.veilarbdialog.dialog.*;
 import no.nav.fo.veilarbdialog.minsidevarsler.MinsideVarselService;
 import no.nav.fo.veilarbdialog.clients.dialogvarsler.DialogVarslerClient;
 import no.nav.fo.veilarbdialog.db.dao.DataVarehusDAO;
@@ -20,6 +21,7 @@ import no.nav.fo.veilarbdialog.oppfolging.siste_periode.SistePeriodeService;
 import no.nav.fo.veilarbdialog.service.exceptions.NyHenvendelsePåHistoriskDialogException;
 import no.nav.poao.dab.spring_auth.IAuthService;
 import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,7 +29,6 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.net.URL;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static no.nav.fo.veilarbdialog.clients.dialogvarsler.DialogVarslerClient.EventType.NY_DIALOGMELDING_FRA_BRUKER_TIL_NAV;
 import static no.nav.fo.veilarbdialog.clients.dialogvarsler.DialogVarslerClient.EventType.NY_DIALOGMELDING_FRA_NAV_TIL_BRUKER;
@@ -70,44 +71,105 @@ public class DialogDataService {
         return dataVarehusDAO.hentSisteEndringSomIkkeErDine(bruker.get(), endretAv.get());
     }
 
-    @Transactional
-    public DialogData opprettMelding(NyMeldingDTO henvendelseData, Person bruker, Boolean skalSendeMinsideVarsel) {
-        var aktivitetsId = AktivitetId.of(henvendelseData.getAktivitetId());
-        AktorId aktorId = hentAktoerIdForPerson(bruker);
-        Fnr fnr = hentFnrForPerson(bruker);
-        if (skalSendeMinsideVarsel && !minsideVarselService.kanVarsles(fnr)) {
-            throw new ResponseStatusException(CONFLICT, "Bruker kan ikke varsles.");
+
+
+    public DialogData getOrCreateDialogTråd(NyDialogEllerMelding henvendelseData, Optional<DialogData> dialogData) {
+        if (henvendelseData instanceof NyDialog opprettDialogData) {
+            return opprettDialog(opprettDialogData, opprettDialogData.getFnr(), opprettDialogData.getAktorId());
+        } else if (dialogData.isPresent()) {
+            return dialogData.get();
+        } else {
+            throw new IllegalArgumentException("Opprett-hendelse kan være NyDialog hvis dialog-tråd ikke finnes fra før men fikk null");
         }
+    }
 
-        DialogData dialog = Optional.ofNullable(hentDialog(henvendelseData.getDialogId(), aktivitetsId))
-                .orElseGet(() -> opprettDialog(henvendelseData, fnr, aktorId.get()));
+    private Long getDialogId(NyDialogEllerMelding data) {
+        if (data instanceof NyMelding nyMelding){
+            return nyMelding.getDialogId();
+        }
+        return null;
+    }
 
-        if(dialog.isHistorisk()) throw new NyHenvendelsePåHistoriskDialogException();
-
-        slettKladd(henvendelseData, bruker);
-
-        opprettHenvendelseForDialog(dialog, fnr, henvendelseData.getEgenskaper() != null && !henvendelseData.getEgenskaper().isEmpty(), henvendelseData.getTekst());
-        dialog = markerDialogSomLest(dialog.getId());
-
-        sendPaaKafka(aktorId.get());
-        var varselOmNyMelding = DialogVarsel.Companion.varselOmNyMelding(
-              dialog.getId(),
+    private @NotNull DialogVarsel toVarselMelding(DialogData dialog, Fnr fnr) {
+        return DialogVarsel.Companion.varselOmNyMelding(
+                dialog.getId(),
                 fnr,
                 dialog.getOppfolgingsperiode(),
                 utledDialogLink(dialog.getId())
         );
+    }
+
+    /**
+     * Varsler skal kun sendes ut når det er Nav som sender ut meldingen.
+     * Eskaleringsvarsel-service sender ut varsel selv og setter skalSendeMinsideVarsel til false for å unngå å sende ut felre varsler.
+     * */
+    @Transactional
+    public DialogData opprettMelding(NyMeldingDTO nyDialogEllerMeldingDto, Person bruker, Boolean skalSendeMinsideVarsel) {
+        var aktivitetsId = AktivitetId.of(nyDialogEllerMeldingDto.getAktivitetId());
+        var aktorId = hentAktoerIdForPerson(bruker);
+        var fnr = hentFnrForPerson(bruker);
+        if (skalSendeMinsideVarsel && !minsideVarselService.kanVarsles(fnr)) {
+            throw new ResponseStatusException(CONFLICT, "Bruker kan ikke varsles.");
+        }
+
+        var maybeDialog = hentDialog(nyDialogEllerMeldingDto.getDialogId(), aktivitetsId, aktorId);
+        if (maybeDialog.isEmpty() && nyDialogEllerMeldingDto.getDialogId() != null) throw new IllegalArgumentException("Fant ikke dialog å sende melding på");
+        if(maybeDialog.isPresent() && maybeDialog.get().isHistorisk()) throw new NyHenvendelsePåHistoriskDialogException();
+
+        var henvendelseData = DialogDomainMapper.tilNyMeldingEllerDialog(
+                nyDialogEllerMeldingDto,
+                maybeDialog.isPresent(),
+                fnr, aktorId,
+                auth.getLoggedInnUser().get(),
+                auth.erEksternBruker() ? AvsenderType.BRUKER : AvsenderType.VEILEDER
+        );
+        var dialog = getOrCreateDialogTråd(henvendelseData, maybeDialog);
+
+        slettKladd(nyDialogEllerMeldingDto.getDialogId(), nyDialogEllerMeldingDto.getAktivitetId(), bruker);
+        var opprettetMelding = opprettMeldingForDialog(henvendelseData, dialog.getId());
+        dialogStatusService.oppdaterDialogTrådStatuserForNyMelding(dialog, opprettetMelding);
+        dialog = markerDialogSomLest(dialog.getId());
+        sendPaaKafka(aktorId.get());
+        sendUtMinsideVarselHvisDetSkalSendesUt(dialog, fnr, aktorId, skalSendeMinsideVarsel);
+        varsleWebsocketLyttereHvisToggletPaa(fnr);
+
+
+        if (henvendelseData instanceof NyDialogFraVeileder nyDialog) {
+            oppdaterFerdigbehandletTidspunkt(dialog.getId(), !nyDialog.getVenterPaaSvarFraNav());
+            return oppdaterVentePaSvarTidspunkt(dialog.getId(), nyDialog.getVenterPaaSvarFraBruker());
+        }
+        if (henvendelseData instanceof NyDialogFraBruker nyDialog) {
+            oppdaterFerdigbehandletTidspunkt(dialog.getId(), !nyDialog.getVenterPaaSvarFraNav());
+        }
+
+        return dialog;
+    }
+
+    public DialogData opprettEskaleringsvarselDialogOgMelding(NyEskaleringsVarselDialog data) {
+        var dialog = opprettDialog(data, data.getFnr(), data.getAktorId());
+        var opprettetMelding = opprettMeldingForDialog(data, dialog.getId());
+        dialogStatusService.oppdaterDialogTrådStatuserForNyMelding(dialog, opprettetMelding);
+        varsleWebsocketLyttereHvisToggletPaa(data.getFnr());
+        oppdaterVentePaSvarTidspunkt(dialog.getId(), true);
+        oppdaterFerdigbehandletTidspunkt(dialog.getId(),true);
+        sendPaaKafka(data.getAktorId().get());
+        markerDialogSomLest(dialog.getId());
+        return dialog;
+    }
+
+    private void sendUtMinsideVarselHvisDetSkalSendesUt(DialogData dialog, Fnr fnr, AktorId aktorId, Boolean skalSendeMinsideVarsel) {
         if (skalSendeMinsideVarsel) {
+            var varselOmNyMelding = toVarselMelding(dialog, fnr);
             minsideVarselService.puttVarselIOutbox(varselOmNyMelding, aktorId);
             log.info("Minside varsel opprettet i PENDING status {} dialogId {}", varselOmNyMelding.getVarselId(), dialog.getId());
         }
+    }
 
-
+    private void varsleWebsocketLyttereHvisToggletPaa(Fnr fnr) {
         if (unleash.isEnabled("veilarbdialog.dialogvarsling")) {
             var eventType = auth.erEksternBruker() ? NY_DIALOGMELDING_FRA_BRUKER_TIL_NAV : NY_DIALOGMELDING_FRA_NAV_TIL_BRUKER;
             dialogVarslerClient.varsleLyttere(fnr, eventType);
         }
-
-        return dialog;
     }
 
     public DialogData markerDialogSomLest(long dialogId) {
@@ -123,60 +185,58 @@ public class DialogDataService {
         return dialogStatusService.oppdaterVenterPaNavSiden(dialogData, ferdigBehandlet);
     }
 
-    public DialogData oppdaterVentePaSvarTidspunkt(DialogStatus dialogStatus) {
-        long dialogId = dialogStatus.dialogId;
+    public DialogData oppdaterVentePaSvarTidspunkt(long dialogId,  Boolean venterPåSvarFraBruker) {
         var dialogData = hentDialogSomKanOppdateres(dialogId);
-        return dialogStatusService.oppdaterVenterPaSvarFraBrukerSiden(dialogData, dialogStatus);
+        return dialogStatusService.oppdaterVenterPaSvarFraBrukerSiden(dialogData, venterPåSvarFraBruker);
     }
 
-    private DialogData opprettHenvendelseForDialog(DialogData dialogData, Fnr fnr, boolean viktigMelding, String tekst) {
-        HenvendelseData opprettet = dialogDAO.opprettHenvendelse(HenvendelseData.builder()
-                .dialogId(dialogData.getId())
-                .avsenderId(auth.getLoggedInnUser().get())
+    private HenvendelseData opprettMeldingForDialog(NyDialogEllerMelding dialogData, Long dialogId) {
+        NyMelding nyMelding = dialogData instanceof NyMelding m ? m : DialogDomainMapper.nyDialogTilNyMelding((NyDialog) dialogData, dialogId);
+        var viktigMelding = dialogData instanceof NyEskaleringsVarselDialog;
+
+        return dialogDAO.opprettHenvendelse(HenvendelseData.builder()
+                .dialogId(dialogId)
+                .avsenderId(dialogData.getAvsenderId())
                 .viktig(viktigMelding)
-                .avsenderType(auth.erEksternBruker() ? AvsenderType.BRUKER : AvsenderType.VEILEDER)
-                .tekst(tekst)
-                .kontorsperreEnhetId(kvpService.kontorsperreEnhetId(fnr))
+                .avsenderType(dialogData.getAvsenderType())
+                .tekst(dialogData.getTekst())
+                .kontorsperreEnhetId(kvpService.kontorsperreEnhetId(nyMelding.getFnr()))
                 .sendt(new Date())
                 .build());
-
-        return dialogStatusService.nyHenvendelse(dialogData, opprettet);
     }
 
     private DialogData hentDialogSomKanOppdateres(long id) {
-        var dialogData = hentDialog(id);
+        var dialogData = hentDialogUtenTilgangsSjekk(id);
         if (dialogData.isHistorisk()) {
             throw new ResponseStatusException(CONFLICT);
         }
         return dialogData;
     }
 
-    public DialogData hentDialog(String dialogId, AktivitetId aktivitetId) {
-        if (dialogId == null && aktivitetId == null) return null;
-
+    public Optional<DialogData> hentDialog(String dialogId, AktivitetId aktivitetId, AktorId aktorId) {
+        if (dialogId == null && aktivitetId == null) return Optional.empty();
         if (dialogId != null && !dialogId.isEmpty()) {
-            return hentDialog(Long.parseLong(dialogId));
+            return Optional.ofNullable(hentDialog(Long.parseLong(dialogId), aktorId));
         } else {
             return Optional.ofNullable(aktivitetId)
-                    .filter(a -> StringUtils.isNotEmpty(a.getId()))
-                    .flatMap(this::hentDialogForAktivitetId)
-                    .orElse(null);
+                .filter(a -> StringUtils.isNotEmpty(a.getId()))
+                .flatMap((id) -> hentDialogForAktivitetId(id, aktorId));
         }
     }
 
     private DialogData markerDialogSomLestAvVeileder(long dialogId) {
-        var dialogData = hentDialog(dialogId);
+        var dialogData = hentDialogUtenTilgangsSjekk(dialogId);
         return dialogStatusService.markerSomLestAvVeileder(dialogData);
     }
 
     private DialogData markerDialogSomLestAvBruker(long dialogId) {
-        var dialogData = hentDialog(dialogId);
+        var dialogData = hentDialogUtenTilgangsSjekk(dialogId);
         return dialogStatusService.markerSomLestAvBruker(dialogData);
     }
 
     @Transactional(readOnly = true)
-    public Optional<DialogData> hentDialogForAktivitetId(AktivitetId aktivitetId) {
-        return dialogDAO.hentDialogForAktivitetId(aktivitetId);
+    public Optional<DialogData> hentDialogForAktivitetId(AktivitetId aktivitetId, AktorId aktorId) {
+        return dialogDAO.hentDialogForAktivitetId(aktivitetId, aktorId);
     }
 
     public AktorId hentAktoerIdForPerson(Person person) {
@@ -225,30 +285,29 @@ public class DialogDataService {
         kafkaProducerService.sendDialogMelding(kafkaDialogMelding);
     }
 
-    public void updateDialogEgenskap(EgenskapType type, long dialogId) {
-        dialogDAO.updateDialogEgenskap(type, dialogId);
+    public DialogData hentDialogUtenTilgangsSjekk(long dialogId) {
+        return dialogDAO.hentDialog(dialogId);
     }
 
-    public DialogData hentDialog(long dialogId) {
-        return dialogDAO.hentDialog(dialogId);
+    public DialogData hentDialog(long dialogId, AktorId aktorId) {
+        return dialogDAO.hentDialog(dialogId, aktorId);
     }
 
     private void oppdaterDialogTilHistorisk(DialogData dialogData) {
         dialogStatusService.settDialogTilHistorisk(dialogData);
     }
 
-    public DialogData opprettDialog(NyMeldingDTO nyHenvendelseDTO, Fnr fnr, String aktorId) {
-        UUID gjeldendeOppfolgingsperiode = sistePeriodeService.hentGjeldendeOppfolgingsperiodeMedFallback(AktorId.of(aktorId));
+    public DialogData opprettDialog(NyDialog nyHenvendelseDTO, Fnr fnr, AktorId aktorId) {
+        UUID gjeldendeOppfolgingsperiode = sistePeriodeService.hentGjeldendeOppfolgingsperiodeMedFallback(aktorId);
         var dialogData = DialogData.builder()
                 .oppfolgingsperiode(gjeldendeOppfolgingsperiode)
                 .overskrift(nyHenvendelseDTO.getOverskrift())
-                .aktorId(aktorId)
+                .aktorId(aktorId.get())
                 .aktivitetId(AktivitetId.of(nyHenvendelseDTO.getAktivitetId()))
-                .egenskaper(Optional.ofNullable(nyHenvendelseDTO.getEgenskaper())
-                        .orElse(Collections.emptyList())
-                        .stream()
-                        .map(egenskap -> EgenskapType.valueOf(egenskap.name()))
-                        .collect(Collectors.toList()))
+                .egenskaper(nyHenvendelseDTO instanceof NyEskaleringsVarselDialog
+                        ? List.of(EgenskapType.ESKALERINGSVARSEL)
+                        : Collections.emptyList()
+                )
                 .kontorsperreEnhetId(kvpService.kontorsperreEnhetId(fnr))
                 .opprettetDato(new Date())
                 .build();
@@ -268,13 +327,12 @@ public class DialogDataService {
             funksjonelleMetrikker.nyDialogVeileder(nyDialog);
         }
 
-
         return nyDialog;
     }
 
-    private void slettKladd(NyMeldingDTO nyHenvendelseDTO, Person person) {
+    private void slettKladd(String dialogId, String aktivitetId, Person person) {
         if (person instanceof Person.Fnr) {
-            kladdService.deleteKladd(person.get(), nyHenvendelseDTO.getDialogId(), nyHenvendelseDTO.getAktivitetId());
+            kladdService.deleteKladd(person.get(), dialogId, aktivitetId);
         }
     }
 
